tests/fail/nightly/invalid_radix_option.stderr
error: unexpected hashtag '#' after number format option
 --> tests/fail/nightly/invalid_radix_option.rs:2:30
  |
2 |     sscanf::sscanf!("", "{:#x#}", u8);
  |                              ^

error: radix option 'r' cannot be used with a hashtag since it can't have a prefix
 --> tests/fail/nightly/invalid_radix_option.rs:3:28
  |
3 |     sscanf::sscanf!("", "{:#r16}", u8);
  |                            ^

error: unexpected hashtag '#' after number format option
 --> tests/fail/nightly/invalid_radix_option.rs:4:31
  |
4 |     sscanf::sscanf!("", "{:r16#}", u8);
  |                               ^

error: radix option 'r' has to be followed by a number
 --> tests/fail/nightly/invalid_radix_option.rs:5:28
  |
5 |     sscanf::sscanf!("", "{:r}", u8);
  |                            ^

error: radix has to be a number between 2 and 36
 --> tests/fail/nightly/invalid_radix_option.rs:6:28
  |
6 |     sscanf::sscanf!("", "{:r99}", u8);
  |                            ^^^

error: radix has to be a number between 2 and 36
 --> tests/fail/nightly/invalid_radix_option.rs:7:28
  |
7 |     sscanf::sscanf!("", "{:r1}", u8);
  |                            ^^
